--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ background-color: black;
 color: white;
 }
 .header{
-    background-image:url(/img/image.jpg);
+    background-image:url(../img/image.jpg);
     background-repeat: no-repeat;
     background-position: 50% 50%;
     background-size: cover;
@@ -112,7 +112,7 @@ button{
     text-align: start;
 }
 .itemone{
-    background-image: url(/img/anime.jpg);
+    background-image: url(../img/anime.jpg);
     width: 304px;
     height: 500px;
     background-repeat: no-repeat;
@@ -124,7 +124,7 @@ button{
     font-size: 24px;
 }
 .itemtwo{
-    background-image: url(/img/anime2.jpg);
+    background-image: url(../img/anime2.jpg);
     width: 304px;
     height: 500px;
     background-repeat: no-repeat;
@@ -136,7 +136,7 @@ button{
     font-size: 24px;
 }
 .itemthree{
-    background-image: url(/img/anime3.jpg);
+    background-image: url(../img/anime3.jpg);
     width: 304px;
     height: 500px;
     background-repeat: no-repeat;
@@ -148,7 +148,7 @@ button{
     font-size: 24px;
 } 
 .itemfour{
-    background-image: url(/img/anime4.jpg);
+    background-image: url(../img/anime4.jpg);
     width: 304px;
     height: 500px;
     background-repeat: no-repeat;
